--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Login| Via Verde</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <div class="container">
     <div class="login-section">
@@ -18,7 +20,9 @@
           <label>
             <input type="checkbox"> Lembrar de mim
           </label>
-         <button type="submit">Entrar</button>
+          <a href="./User/Home.html">
+            <button type="submit">Entrar</button>
+          </a>
         </form>
         <div style="display: flex; justify-content: space-between; margin-bottom: 10px;">
           <a href="./cadastro.html">Não tenho login</a>
@@ -32,15 +36,16 @@
       </div>
     </div>
     <div class="right-section">
-  <div class="header-bar">
-    <h1 class="via-verde-title">Via Verde</h1>
-    <div class="social-icons">
-      <a href="https://x.com/"><img src="./icones/twitter.png" alt="twitter" /></a>
-      <a href="https://www.instagram.com/"><img src="./icones/instagram.png" alt="Instagram" /></a>
-      <a href="https://pt-br.facebook.com/"><img src="./icones/facebook.png" alt="facebook" /></a>
+      <div class="header-bar">
+        <h1 class="via-verde-title">Via Verde</h1>
+        <div class="social-icons">
+          <a href="https://x.com/"><img src="./icones/twitter.png" alt="twitter" /></a>
+          <a href="https://www.instagram.com/"><img src="./icones/instagram.png" alt="Instagram" /></a>
+          <a href="https://pt-br.facebook.com/"><img src="./icones/facebook.png" alt="facebook" /></a>
+        </div>
+      </div>
     </div>
   </div>
-</div>
-  </div>
 </body>
+
 </html>
