--- a/ADM/home.html
+++ b/ADM/home.html
@@ -17,25 +17,12 @@
             <img src="../icones/menu.png" width="30px" style="padding-right: 5px;" wialt="menu">
         </div>
         <ul class="menu">
-            <a href="./Home.html">
+            <a href="./home.html">
                 <li><img src="../icones/casa.png" alt="Home"><span>Home</span></li>
             </a>
             <hr>
-            <a href="./Procurar Deposito.html">
-                <li><img src="../icones/mais-zoom.png" alt="Mapa"><span>Procurar pontos de depósito</span></li>
-            </a>
-            <hr>
-            <a href="">
-                <li><img src="../icones/mais (1).png" alt="Adicionar meu reciclavel"><span>Adicionar meu
-                        reciclavel</span></li>
-            </a>
-            <hr>
-            <a href="">
-                <li><img src="../icones/pin-de-localizacao.png" alt="Voluntàrio"><span>Voluntàrio</span></li>
-            </a>
-            <hr>
-            <a href="">
-                <li><img src="../icones/favoritos.png" alt="Ver favoritos"><span>Ver favoritos</span></li>
+            <a href="./all_users.html">
+                <li><img src="../icones/group.png" alt="Grupo"><span>Todos os Usuários</span></li>
             </a>
             <hr>
         </ul>
