--- a/Cooperativa/Home.html
+++ b/Cooperativa/Home.html
@@ -25,16 +25,11 @@
                 <li><img src="../icones/mais-zoom.png" alt="Mapa"><span>Procurar pontos de depósito</span></li>
             </a>
             <hr>
-            <a href="">
-                <li><img src="../icones/mais (1).png" alt="Adicionar meu reciclavel"><span>Adicionar meu
-                        reciclavel</span></li>
+            <a href="./notas.html">
+                <li><img src="../icones/nota.png" alt="Adicionar nota"><span>Adicionar nota</span></li>
             </a>
             <hr>
-            <a href="">
-                <li><img src="../icones/pin-de-localizacao.png" alt="Voluntàrio"><span>Voluntàrio</span></li>
-            </a>
-            <hr>
-            <a href="">
+            <a href="./favoritos.html">
                 <li><img src="../icones/favoritos.png" alt="Ver favoritos"><span>Ver favoritos</span></li>
             </a>
             <hr>
