--- a/Cooperativa/Procurar Deposito.html
+++ b/Cooperativa/Procurar Deposito.html
@@ -81,28 +81,24 @@
             <img src="../icones/menu.png" width="30px" style="padding-right: 5px;" wialt="menu">
         </div>
         <ul class="menu">
-            <a href="./Home.html">
-                <li><img src="../icones/casa.png" alt="Home"><span>Home</span></li>
-            </a>
-            <hr>
-            <a href="./Procurar Deposito.html">
-                <li><img src="../icones/mais-zoom.png" alt="Mapa"><span>Procurar pontos de depósito</span></li>
-            </a>
-            <hr>
-            <a href="">
-                <li><img src="../icones/mais (1).png" alt="Adicionar meu reciclavel"><span>Adicionar meu
-                        reciclavel</span></li>
-            </a>
-            <hr>
-            <a href="">
-                <li><img src="../icones/pin-de-localizacao.png" alt="Voluntàrio"><span>Voluntàrio</span></li>
-            </a>
-            <hr>
-            <a href="">
-                <li><img src="../icones/favoritos.png" alt="Ver favoritos"><span>Ver favoritos</span></li>
-            </a>
-            <hr>
-        </ul>
+            <ul class="menu">
+      <a href="./Home.html">
+        <li><img src="../icones/casa.png" alt="Home"><span>Home</span></li>
+      </a>
+      <hr>
+      <a href="./Procurar Deposito.html">
+        <li><img src="../icones/mais-zoom.png" alt="Mapa"><span>Procurar pontos de depósito</span></li>
+      </a>
+      <hr>
+      <a href="./notas.html">
+        <li><img src="../icones/nota.png" alt="Adicionar nota"><span>Adicionar nota</span></li>
+      </a>
+      <hr>
+      <a href="./favoritos.html">
+        <li><img src="../icones/favoritos.png" alt="Ver favoritos"><span>Ver favoritos</span></li>
+      </a>
+      <hr>
+    </ul>
         <ul class="sidebar-footer">
             <hr>
             <a href="">
