--- a/cadastro.html
+++ b/cadastro.html
@@ -146,7 +146,7 @@
           <button>Cadastrar</button>
         </form>
         <div style="display: flex; justify-content: space-between; margin-bottom: 10px;">
-          <a href="./index.html">Já tenho login</a>
+          <a href="./login.html">Já tenho login</a>
           <a href="#">Ajuda</a>
         </div>
         <hr>
