--- a/cadastro.html
+++ b/cadastro.html
@@ -2,14 +2,19 @@
 <html lang="pt-BR">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Login| Via Verde</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Cadastro - Via Verde</title>
+  <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <style>
+    /* Seu CSS existente */
     .login-box {
-      max-width: 400px;
+      max-width: 480px;
       width: 100%;
+      max-height: 90vh;
+      overflow-y: auto;
+      padding: 20px;
     }
 
     .form-section {
@@ -23,14 +28,6 @@
       padding: 10px;
     }
 
-    .login-box {
-      max-width: 480px;
-      width: 100%;
-      max-height: 90vh;
-      overflow-y: auto;
-      padding: 20px;
-    }
-
     .form-grid {
       display: grid;
       grid-template-columns: 1fr 1fr;
@@ -42,12 +39,14 @@
       grid-template-columns: 1fr;
     }
 
-    .form-grid input {
+    .form-grid input,
+    .form-grid select {
       width: 100%;
       padding: 8px;
       font-size: 0.85rem;
       border: 1px solid #ccc;
       border-radius: 5px;
+      box-sizing: border-box;
     }
 
     .login-box h2,
@@ -62,6 +61,7 @@
       padding: 10px;
       font-size: 0.95rem;
       margin: 10px 0;
+      cursor: pointer;
     }
 
     .social-login {
@@ -71,10 +71,24 @@
     .social-button {
       padding: 8px;
       font-size: 0.8rem;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      cursor: pointer;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      margin-bottom: 6px;
+      user-select: none;
     }
 
     .login-box a {
       font-size: 0.75rem;
+      color: #333;
+      text-decoration: none;
+    }
+
+    .login-box a:hover {
+      text-decoration: underline;
     }
 
     @media (max-width: 600px) {
@@ -99,62 +113,63 @@
 </head>
 
 <body>
+
   <div class="container">
     <div class="login-section">
-      <img src="./icones/logo.png" alt="Logo Via Verde" class="logo">
+      <img src="./icones/logo.png" alt="Logo Via Verde" class="logo" />
       <div class="login-box">
         <h2>Cadastro</h2>
-        <form action="">
+        <form id="formCadastro">
           <div class="form-grid">
-            <input type="text" placeholder="Nome/Razão Social" required>
-            <input type="text" placeholder="CPF/CNPJ" required>
+            <input type="text" id="nome" placeholder="Nome/Razão Social" required />
+            <input type="text" id="cpf_cnpj" placeholder="CPF/CNPJ" required />
           </div>
 
           <div class="form-grid">
-            <input type="email" placeholder="E-mail" required>
-            <input type="password" placeholder="Senha" required>
+            <input type="email" id="email" placeholder="E-mail" required />
+            <input type="password" id="senha" placeholder="Senha" required />
           </div>
 
           <div class="form-grid">
-            <input type="tel" placeholder="Telefone" required>
+            <input type="tel" id="telefone" placeholder="Telefone" required />
 
-            <select style="border: 1px solid #ccc;text-align: center;" name="tipo" id="tipo_entidade"
-              placeholder="Selecione" required>
-              <option value="Selecione">Selecione</option>
-              <option value="Usuário">Usuário</option>
-              <option value="Cooperativa">Cooperativa</option>
-              <option value="Instituição">Instituição</option>
+            <select id="tipo_usuario" required>
+              <option value="">Selecione</option>
+              <option value="usuario">Usuário</option>
+              <option value="cooperativa">Cooperativa</option>
+              <option value="instituicao">Instituição</option>
             </select>
+
           </div>
 
           <h3>Endereço</h3>
 
           <div class="form-grid">
-            <input type="text" placeholder="Rua">
-            <input type="text" placeholder="Bairro">
+            <input type="text" id="rua" placeholder="Rua" />
+            <input type="text" id="bairro" placeholder="Bairro" />
           </div>
 
           <div class="form-grid">
-            <input type="text" placeholder="Nº">
-            <input type="text" placeholder="CEP">
+            <input type="text" id="numero" placeholder="Nº" />
+            <input type="text" id="cep" placeholder="CEP" />
           </div>
 
           <div class="form-grid">
-            <input type="text" placeholder="Estado">
-            <input type="text" placeholder="Cidade">
+            <input type="text" id="estado" placeholder="Estado" />
+            <input type="text" id="cidade" placeholder="Cidade" />
           </div>
-          <button>Cadastrar</button>
+
+          <button type="submit">Cadastrar</button>
         </form>
+
         <div style="display: flex; justify-content: space-between; margin-bottom: 10px;">
           <a href="./login.html">Já tenho login</a>
           <a href="#">Ajuda</a>
         </div>
-        <hr>
+        <hr />
         <div class="social-login">
-          <div class="social-button"><img src="./icones/facebook.png" width="20" alt="Facebook"> Cadastrar Usando
-            Facebook</div>
-          <div class="social-button"><img src="./icones/google.png" width="20" alt="Google"> Cadastrar Usando Google
-          </div>
+          <div class="social-button"><img src="./icones/facebook.png" width="20" alt="Facebook" /> Cadastrar com Facebook</div>
+          <div class="social-button"><img src="./icones/google.png" width="20" alt="Google" /> Cadastrar com Google</div>
         </div>
       </div>
     </div>
@@ -169,6 +184,97 @@
       </div>
     </div>
   </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.0.0/dist/umd/supabase.js"></script>
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const supabaseUrl = 'https://lvqnxtjxczxsyhbjpiwb.supabase.co';
+    const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imx2cW54dGp4Y3p4c3loYmpwaXdiIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDk2ODM3NTUsImV4cCI6MjA2NTI1OTc1NX0.FAGd8OsDZB_baU4z-FDfxixEKC_EksK88JJM7LoyidQ'; // 🔒 Use a chave pública (anon)
+
+    const supabaseClient = supabase.createClient(supabaseUrl, supabaseKey);
+
+    const form = document.getElementById('formCadastro');
+
+    form.addEventListener('submit', async (event) => {
+      event.preventDefault();
+
+      const nome = document.getElementById('nome').value.trim();
+      const cpf_cnpj = document.getElementById('cpf_cnpj').value.trim();
+      const email = document.getElementById('email').value.trim();
+      const senha = document.getElementById('senha').value;
+      const telefone = document.getElementById('telefone').value.trim();
+      const tipo_usuario = document.getElementById('tipo_usuario').value;
+
+      const rua = document.getElementById('rua').value.trim();
+      const bairro = document.getElementById('bairro').value.trim();
+      const numero = document.getElementById('numero').value.trim();
+      const cep = document.getElementById('cep').value.trim();
+      const estado = document.getElementById('estado').value.trim();
+      const cidade = document.getElementById('cidade').value.trim();
+
+      // 1) Criar conta no Supabase Auth
+      const { data: signUpData, error: signUpError } = await supabaseClient.auth.signUp({
+        email,
+        password: senha,
+      });
+
+      if (signUpError) {
+        alert('Erro ao criar conta: ' + signUpError.message);
+        return;
+      }
+
+      const authId = signUpData.user?.id;
+      if (!authId) {
+        alert('Erro: usuário não criado corretamente.');
+        return;
+      }
+
+      // 2) Inserir dados na tabela usuarios
+      const { data: usuarioData, error: insertUserError } = await supabaseClient
+        .from('usuarios')
+        .insert([{
+          auth_id: authId,
+          nome,
+          cpf_cnpj,
+          email,
+          telefone,
+          tipo_usuario
+        }])
+        .select()
+        .single();
+
+      if (insertUserError) {
+        alert('Erro ao salvar dados do usuário: ' + insertUserError.message);
+        return;
+      }
+
+      const usuarioId = usuarioData.id;
+
+      // 3) Inserir endereço
+      const { error: enderecoError } = await supabaseClient
+        .from('enderecos')
+        .insert([{
+          usuario_id: usuarioId,
+          rua,
+          bairro,
+          numero,
+          cep,
+          estado,
+          cidade
+        }]);
+
+      if (enderecoError) {
+        alert('Erro ao salvar endereço: ' + enderecoError.message);
+      } else {
+        alert('Cadastro realizado com sucesso!');
+        form.reset();
+        window.location.href = './login.html';
+      }
+    });
+  });
+</script>
+
+
 </body>
 
 </html>
