--- a/Projeto-Integrado-main/ADM/home.html
+++ b/Projeto-Integrado-main/ADM/home.html
@@ -28,7 +28,7 @@
         </ul>
         <ul class="sidebar-footer">
             <hr>
-            <a href="configuracao.html">
+            <a href="">
                 <li><img src="../icones/definicoes.png" alt="Configurações"><span>Configurações</span></li>
             </a>
             <hr>
