--- a/Projeto-Integrado-main/Cooperativa/Procurar Deposito.html
+++ b/Projeto-Integrado-main/Cooperativa/Procurar Deposito.html
@@ -160,7 +160,8 @@
     </ul>
         <ul class="sidebar-footer">
             <hr>
-            <a href="configuracao.html">
+            <a href="./configuracao.html
+            ">
                 <li><img src="../icones/definicoes.png" alt="Configurações"><span>Configurações</span></li>
             </a>
             <hr>
