--- a/Projeto-Integrado-main/Cooperativa/configuracao.html
+++ b/Projeto-Integrado-main/Cooperativa/configuracao.html
@@ -113,7 +113,7 @@ input[type= email] {
         </ul>
         <ul class="sidebar-footer">
             <hr>
-            <a href="">
+            <a href="./configuracao.html">
                 <li><img src="../icones/definicoes.png" alt="Configurações"><span>Configurações</span></li>
             </a>
             <hr>
