--- a/Projeto-Integrado-main/Entidade_Carente/favoritos.html
+++ b/Projeto-Integrado-main/Entidade_Carente/favoritos.html
@@ -160,7 +160,7 @@
         </ul>
         <ul class="sidebar-footer">
             <hr>
-            <a href="configuracao.html">
+            <a href="./configuracao.html">
                 <li><img src="../icones/definicoes.png" alt="Configurações"><span>Configurações</span></li>
             </a>
             <hr>
