--- a/Projeto-Integrado-main/index.html
+++ b/Projeto-Integrado-main/index.html
@@ -13,19 +13,22 @@
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: #75c89c;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 100vh;
+      overflow: scroll;
+      
     }
 
     .container {
+      margin: 2%;
       background-color: white;
       width: 80%;
-      max-width: 1000px;
+      max-width: 1500px;
       border-radius: 15px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.2);
       display: flex;
-      overflow: hidden;
     }
 
     .left {
@@ -83,6 +86,8 @@
     .right {
       flex: 1;
       background: url('./img/fundo.png') center center/cover no-repeat;
+      border-top-right-radius: 15px;
+      border-bottom-right-radius: 15px;
     }
 
     @media (max-width: 768px) {
@@ -93,22 +98,77 @@
         height: 300px;
       }
     }
+
+    .descricao{
+      margin: 2%;
+      background-color: white;
+      width: 80%;
+      max-width: 1500px;
+      min-height: 350px;
+      border-radius: 15px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+      display: flex;
+      overflow: hidden;
+    }
+
+    .des-left {
+      flex: 1;
+      padding: 40px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+
+    .des-right {
+      flex: 1;
+      background: url('./img/universidade-logo.png') center center/50% no-repeat;
+    }
+
+    @media (max-width: 768px) {
+      .descricao {
+        flex-direction: column;
+      }
+      .des-right {
+        height: 100%;
+      }
+    }
+
   </style>
 </head>
 <body>
   <div class="container">
     <div class="left">
       <h1>Bem-vindo ao Via Verde</h1>
-      <p>   Via Verde é um projeto que visa facilitar a conexão entre corporativas de 
-            reciclagem com cidadãos e entidades carentes que precisam se livrar de 
-            resíduos que poderiam ser utilizados por essas corporações, transformando 
-            esse processo demorado em uma experiência rápida e prática.</p>
+        <p>Via Verde é um projeto que visa facilitar a conexão entre corporativas de 
+          reciclagem com cidadãos e entidades carentes que precisam se livrar de 
+          resíduos que poderiam ser utilizados por essas corporações, transformando 
+          esse processo demorado em uma experiência rápida e prática.</p>
       <div class="buttons">
         <a href="./login.html" class="btn-login">Login</a>
         <a href="./cadastro.html" class="btn-cadastro">Cadastro</a>
       </div>
     </div>
     <div class="right"></div>
+  </div>
+  <div class="descricao">
+    <div class="des-left">
+      <p>Esta aplicação foi utilizado como Projeto Integrador na 
+      Universidade Vila Velha (UVV) no Curso Ciência da Computação das 
+      seguintes materias:</p>
+      <br>
+      <p>Construção de Software para Web</p>
+      <p>Design e Desenvolvimento de Banco de Dados I</p>
+      <p>Experiência e Interface com o Usuário</p>
+      <br>
+      <p>Produzido pelos alunos:</p>
+      <br>
+      <p>Chrystian Roberto Cunha Rodrigues Filho</p>
+      <p>Henrique Mendes Amorim</p>
+      <p>Paulo de Souza Stauffer Alberto</p>
+      <p>Pedro Ivo Amaral Lima</p>
+      <p>Thierry da silva Uceli</p>
+    </div>
+    <div class="des-right"></div>
   </div>
 </body>
 </html>
