--- a/Cooperativa/notas.html
+++ b/Cooperativa/notas.html
@@ -103,7 +103,8 @@
     </ul>
     <ul class="sidebar-footer">
       <hr>
-      <a href="#">
+      <a href="./configuracao.html
+      ">
         <li><img src="../icones/definicoes.png" alt="Configurações"><span>Configurações</span></li>
       </a>
       <hr>
