--- a/User/Procurar Deposito.html
+++ b/User/Procurar Deposito.html
@@ -165,7 +165,7 @@
         </ul>
         <ul class="sidebar-footer">
             <hr>
-            <a href="">
+            <a href="./configuracao.html">
                 <li><img src="../icones/definicoes.png" alt="Configurações"><span>Configurações</span></li>
             </a>
             <hr>
