--- a/index.html
+++ b/index.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Login| Via Verde</title>
+  <title>Via Verde</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="./icones/favicon.png" type="image/x-icon">
 </head>
   <style>
     body {
-      margin: 0;
+      margin: 10px;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: #75c89c;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+      height: 120vh;
       overflow: scroll;
-      
     }
-
+/* a ganbiarra funciona as vezes, espero que fique bom em telas pequenas tbm, com esse height, eu acharia melhor tirar, mas so ajustei ele :P*/
     .container {
       margin: 2%;
       background-color: white;
