--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Via Verde</title>
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="./icones/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../icones/favicon.png" type="image/x-icon">
 </head>
   <style>
     body {
@@ -16,7 +17,7 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      height: 120vh;
+      height: 130vh;
       overflow: scroll;
     }
 /* a ganbiarra funciona as vezes, espero que fique bom em telas pequenas tbm, com esse height, eu acharia melhor tirar, mas so ajustei ele :P*/
