--- a/cadastro.html
+++ b/cadastro.html
@@ -7,8 +7,8 @@
   <title>Cadastro - Via Verde</title>
   <link rel="stylesheet" href="./style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link rel="shortcut icon" href="./icones/favicon.png" type="image/x-icon">
   <style>
-    /* Seu CSS existente */
     .login-box {
       max-width: 480px;
       width: 100%;
@@ -63,11 +63,6 @@
       margin: 10px 0;
       cursor: pointer;
     }
-
-    .social-login {
-      margin-top: 10px;
-    }
-
     .social-button {
       padding: 8px;
       font-size: 0.8rem;
@@ -167,10 +162,10 @@
           <a href="#">Ajuda</a>
         </div>
         <hr />
-        <div class="social-login">
-          <div class="social-button"><img src="./icones/facebook.png" width="20" alt="Facebook" /> Cadastrar com Facebook</div>
-          <div class="social-button"><img src="./icones/google.png" width="20" alt="Google" /> Cadastrar com Google</div>
-        </div>
+         <!--<div class="social-login"> 
+          <div class="social-button"><img src="./icones/facebook.png" width="20"> Entrar usando Facebook</div>
+          <div class="social-button"><img src="./icones/google.png" width="20"> Entrar usando Google</div>
+        </div> A gente so tirou essa parte da pagina principal, por questões de funcionalidade-->
       </div>
     </div>
     <div class="right-section">
