--- a/recuperar_senha.html
+++ b/recuperar_senha.html
@@ -3,10 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Login | Via Verde</title>
+  <title>Recuperar Senha - Via Verde</title>
   <link rel="stylesheet" href="style.css">
-
-  <!-- Carrega Supabase ANTES de qualquer uso -->
+  <link rel="shortcut icon" href="./icones/favicon.png" type="image/x-icon">
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
