--- a/User/Cadastrar meu Residuo.html
+++ b/User/Cadastrar meu Residuo.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastrar reciclável - ViaVerde</title>
+    <title>Cadastrar Reciclável - ViaVerde</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="shortcut icon" href="../icones/favicon.png" type="image/x-icon">
 </head>
 <style>
 
