--- a/ADM/all_users.html
+++ b/ADM/all_users.html
@@ -110,7 +110,7 @@
                 <li><img src="../icones/definicoes.png" alt="Configurações"><span>Configurações</span></li>
             </a>
             <hr>
-            <a href="">
+            <a href="../index.html">
                 <li><img src="../icones/sair.png" alt="Sair"><span>Sair</span></li>
             </a>
             <hr>
