--- a/ADM/home.html
+++ b/ADM/home.html
@@ -28,11 +28,11 @@
         </ul>
         <ul class="sidebar-footer">
             <hr>
-            <a href="">
+            <a href="./configuracao.html">
                 <li><img src="../icones/definicoes.png" alt="Configurações"><span>Configurações</span></li>
             </a>
             <hr>
-            <a href="">
+            <a href="../index.html">
                 <li><img src="../icones/sair.png" alt="Sair"><span>Sair</span></li>
             </a>
             <hr>
@@ -49,7 +49,7 @@
                 <div class="comment-box">
                     <div class="user-header">
                         <img src="../img/31ec2ce212492e600b8de27f38846ed7.jpg" alt="user">
-                        <span>Marcos Garcia</span>
+                        <span>Você</span>
                         <span class="status online"></span>
                     </div>
                     <textarea placeholder="Faça um Comentário"></textarea>
@@ -88,17 +88,23 @@
                     </div>
                     <h3>Nota 07/06/2025</h3>
                     <br>
-                    <p>O deputado Sergio Meneguelli (Republicanos) apresentou o Projeto de Lei (PL) 566/2024 que
-                        institui a Semana de Conscientização sobre a Reciclagem e Valorização do Meio Ambiente nas
-                        Escolas Públicas do Espírito Santo. A atividade deverá ser realizada no início de junho para
-                        coincidir com o Dia Mundial do Meio Ambiente, celebrado no dia 5.  Ele afirma que o objetivo é
-                        promover educação ambiental, especialmente em um momento no qual as questões ecológicas se
-                        tornam cada vez mais urgentes em todo o mundo.   Diz ainda Meneguelli que o Espírito Santo,
-                        conhecido por sua rica biodiversidade e belíssimas paisagens naturais, enfrenta desafios
-                        significativos relacionados à poluição, desmatamento e gestão inadequada de resíduos.   “É
-                        fundamental que as futuras gerações sejam conscientizadas sobre a importância da preservação
-                        ambiental e da reciclagem desde cedo, formando cidadãos responsáveis e engajados na proteção do
-                        nosso meio ambiente”.</p>
+                    <p>A Secretaria Municipal de Meio Ambiente informa à população que a correta separação e destinação dos resíduos sólidos é fundamental para a preservação ambiental, a saúde pública e o funcionamento das cooperativas de reciclagem do município.
+
+Tipos de resíduos e suas classificações básicas:
+
+Resíduos Recicláveis Secos: papel, papelão, plástico, vidro e metal. Devem ser limpos e secos antes do descarte.
+
+Resíduos Orgânicos: restos de alimentos, cascas de frutas e vegetais, borra de café e chá.
+
+Resíduos Perigosos: pilhas, baterias, lâmpadas fluorescentes, remédios vencidos, eletrônicos.
+
+Rejeitos: aquilo que não pode ser reciclado ou reaproveitado, como papel higiênico, fraldas e absorventes.
+
+A população deve depositar cada tipo de resíduo em seu recipiente apropriado ou em um dos pontos de coleta seletiva espalhados pela cidade.
+
+Lembre-se: Separar corretamente o lixo é um ato de responsabilidade coletiva. Além de reduzir a quantidade de resíduos em aterros sanitários, a reciclagem gera renda para centenas de famílias nas cooperativas locais.
+
+Vamos juntos cuidar do nosso planeta!.</p>
                     <img src="../img/906341-lixo_carnaval _rio de janeiro-9965.webp" alt="lixo reciclável">
                 </div>
             </div>
