--- a/Cooperativa/notas.html
+++ b/Cooperativa/notas.html
@@ -104,12 +104,11 @@
     </ul>
     <ul class="sidebar-footer">
       <hr>
-      <a href="./configuracao.html
-      ">
+      <a href="./configuracao.html">
         <li><img src="../icones/definicoes.png" alt="Configurações"><span>Configurações</span></li>
       </a>
       <hr>
-      <a href="#">
+      <a href="../index.html">
         <li><img src="../icones/sair.png" alt="Sair"><span>Sair</span></li>
       </a>
       <hr>
