--- a/Entidade_Carente/configuracao.html
+++ b/Entidade_Carente/configuracao.html
@@ -118,7 +118,7 @@ input[type= email] {
                 <li><img src="../icones/definicoes.png" alt="Configurações"><span>Configurações</span></li>
             </a>
             <hr>
-            <a href="">
+            <a href="../index.html">
                 <li><img src="../icones/sair.png" alt="Sair"><span>Sair</span></li>
             </a>
             <hr>
