--- a/User/Cadastrar meu Residuo.html
+++ b/User/Cadastrar meu Residuo.html
@@ -134,7 +134,7 @@
         </li>
       </a>
       <hr />
-      <a href="">
+      <a href="../index.html">
         <li><img src="../icones/sair.png" alt="Sair" /><span>Sair</span></li>
       </a>
       <hr />
