--- a/cadastro.html
+++ b/cadastro.html
@@ -132,7 +132,7 @@
               <option value="">Selecione</option>
               <option value="usuario">Usuário</option>
               <option value="cooperativa">Cooperativa</option>
-              <option value="instituicao">Instituição</option>
+              <option value="instituicao">Entidade Carente</option>
             </select>
 
           </div>
