--- a/login.html
+++ b/login.html
@@ -94,7 +94,7 @@
           window.location.href = './Cooperativa/Home.html';
           break;
         case 'instituicao':
-          window.location.href = './Entidade_Carente';
+          window.location.href = './Entidade_Carente/Home.html';
           break;
         default:
           alert('Tipo de usuário desconhecido.');
