--- a/Entidade_Carente/Procurar Deposito.html
+++ b/Entidade_Carente/Procurar Deposito.html
@@ -199,7 +199,7 @@
         <button><i class="fas fa-phone"></i> Ligar</button>
         <button><i class="fas fa-share-alt"></i> Compartilhar</button>
     </div>
-    <p class="descricao-local">Avajrfit Kals, hrufas isa sofcfar malandis soltiquê abartens dominet minondo juras qepuarque.</p>
+    <p class="descricao-local">.</p>
     <button onclick="fecharDetalhes()" style="background: #ffffff; margin-top: 10px; width: 100px; border-radius: 5px;">Sair</button>
 </div>
 
