--- a/ADM/all_users.html
+++ b/ADM/all_users.html
@@ -1,90 +1,153 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todos os usuarios -  Via Verde</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="shortcut icon" href="../icones/favicon.png" type="image/x-icon">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Home - Coleta Seletiva</title>
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <style>
-    .search-bar {
-        display: flex;
-        justify-content: center;
-        margin: 20px 0;
-    }
+        /* Seu estilo existente */
+        .search-bar {
+            display: flex;
+            justify-content: center;
+            margin: 20px 0;
+            gap: 10px;
+        }
 
-    .search-bar input {
-        width: 60%;
-        padding: 8px 12px;
-        border-radius: 20px;
-        border: 1px solid #999;
-    }
+        .search-bar input {
+            width: 60%;
+            padding: 8px 12px;
+            border-radius: 20px;
+            border: 1px solid #999;
+        }
 
-    .user-container {
-        margin: 0 auto;
-        width: 90%;
-        max-width: 1000px;
-        background-color: #B3FFCC;
-        padding: 20px;
-        border-radius: 10px;
-        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
+        .user-container {
+            margin: 0 auto;
+            width: 90%;
+            max-width: 1000px;
+            background-color: #b3ffcc;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
 
-    .user-id {
-        font-weight: bold;
-        background-color: #B3FFCC;
-        color: rgb(0, 0, 0);
-        padding: 10px;
-        border-radius: 5px;
-        font-size: 16px;
-    }
+        .user-id {
+            font-weight: bold;
+            background-color: #b3ffcc;
+            color: rgb(0, 0, 0);
+            padding: 10px;
+            border-radius: 5px;
+            font-size: 16px;
+        }
 
-    .user-info {
-        display: flex;
-        justify-content: space-between;
-        margin-top: 20px;
-    }
+        .user-info {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 20px;
+        }
 
-    .info-block {
-        width: 48%;
-    }
+        .info-block {
+            width: 48%;
+        }
 
-    .info-block h4 {
-        margin-bottom: 10px;
-        font-size: 16px;
-        border-bottom: 1px solid #444;
-    }
+        .info-block h4 {
+            margin-bottom: 10px;
+            font-size: 16px;
+            border-bottom: 1px solid #444;
+        }
 
-    .info-block p {
-        margin: 4px 0;
-    }
+        .info-block p {
+            margin: 4px 0;
+            display: flex;
+            align-items: center;
+        }
 
-    .edit-link {
-        margin-top: 10px;
-        display: inline-block;
-        color: #0077cc;
-        text-decoration: none;
-        font-size: 14px;
-    }
+        .info-block p span,
+        .info-block p input {
+            margin-left: 8px;
+            flex: 1;
+        }
 
-    .edit-link:hover {
-        text-decoration: underline;
-    }
+        .info-block p input {
+            padding: 4px 8px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+            font-size: 14px;
+        }
 
-    .history {
-        margin-top: 30px;
-    }
+        .edit-link {
+            margin-top: 10px;
+            display: inline-block;
+            color: #0077cc;
+            text-decoration: none;
+            font-size: 14px;
+            cursor: pointer;
+        }
 
-    .history textarea {
-        width: 100%;
-        height: 150px;
-        border-radius: 15px;
-        border: 1px solid #ccc;
-        padding: 10px;
-        resize: none;
-    }
-</style>
+        .edit-link:hover {
+            text-decoration: underline;
+        }
+
+        .history {
+            margin-top: 30px;
+        }
+
+        .history textarea {
+            width: 100%;
+            height: 150px;
+            border-radius: 15px;
+            border: 1px solid #ccc;
+            padding: 10px;
+            resize: none;
+        }
+
+        /* Modal Popup */
+        #modal {
+            display: none;
+            position: fixed;
+            z-index: 9999;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.5);
+        }
+
+        #modal-content {
+            background-color: #fefefe;
+            margin: 15% auto;
+            padding: 20px 30px;
+            border: 1px solid #888;
+            border-radius: 10px;
+            max-width: 400px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+            text-align: center;
+            font-family: Arial, sans-serif;
+        }
+
+        #modal-content p {
+            margin-bottom: 20px;
+            font-size: 16px;
+        }
+
+        #modal-close-btn {
+            padding: 8px 18px;
+            background-color: #0077cc;
+            color: white;
+            border: none;
+            border-radius: 7px;
+            cursor: pointer;
+            font-weight: bold;
+        }
+
+        #modal-close-btn:hover {
+            background-color: #005fa3;
+        }
+    </style>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 
 <body>
@@ -92,67 +155,78 @@
 
     <div class="sidebar">
         <div class="menu-toggle" onclick="toggleSidebar()">
-            <img src="../icones/menu.png" width="30px" style="padding-right: 5px;" wialt="menu">
+            <img src="../icones/menu.png" width="30px" style="padding-right: 5px;" alt="menu" />
         </div>
         <ul class="menu">
             <a href="./home.html">
-                <li><img src="../icones/casa.png" alt="Home"><span>Home</span></li>
+                <li><img src="../icones/casa.png" alt="Home" /><span>Home</span></li>
             </a>
-            <hr>
+            <hr />
             <a href="./all_users.html">
-                <li><img src="../icones/group.png" alt="Grupo"><span>Todos os Usuários</span></li>
+                <li><img src="../icones/group.png" alt="Grupo" /><span>Todos os Usuários</span></li>
             </a>
-            <hr>
+            <hr />
         </ul>
         <ul class="sidebar-footer">
-            <hr>
+            <hr />
             <a href="./configuracao.html">
-                <li><img src="../icones/definicoes.png" alt="Configurações"><span>Configurações</span></li>
+                <li><img src="../icones/definicoes.png" alt="Configurações" /><span>Configurações</span></li>
             </a>
-            <hr>
-            <a href="../index.html">
-                <li><img src="../icones/sair.png" alt="Sair"><span>Sair</span></li>
+            <hr />
+            <a href="">
+                <li><img src="../icones/sair.png" alt="Sair" /><span>Sair</span></li>
             </a>
-            <hr>
+            <hr />
         </ul>
     </div>
 
     <main class="content">
         <header>
             <h1>Home</h1>
-            <img src="../icones/logo.png" alt="Logo-Via-Verde">
+            <img src="../icones/logo.png" alt="Logo-Via-Verde" />
         </header>
+
         <div class="search-bar">
-    <input type="text" placeholder="ID do usuário / Nome /Razão Social">
-</div>
-
-<div class="user-container">
-    <div class="user-id">ID - 000000000 000 000001</div>
-
-    <div class="user-info">
-        <div class="info-block">
-            <h4>INFORMAÇÕES PESSOAIS</h4>
-            <p>Nome/razão social:</p>
-            <p>Cpf/Cnpj:</p>
-            <p>Telefone:</p>
-            <p>Email:</p>
+            <input id="searchInput" type="text" placeholder="ID do usuário / Nome / Razão Social" />
+            <button onclick="buscarUsuario()">Buscar</button>
         </div>
 
-        <div class="info-block">
-            <h4>INFORMAÇÕES DA CONTA</h4>
-            <p>Nome/razão social:</p>
-            <p>Cpf/Cnpj:</p>
-            <p>Email:</p>
-            <a href="" class="edit-link"><i class="fas fa-link"></i> Alterar Dados do Perfil</a>
-        </div>
-    </div>
+        <div class="user-container">
+            <div class="user-id" id="userId">ID - 000000000 000 000001</div>
 
-    <div class="history">
-        <h4>Histórico</h4>
-        <textarea readonly></textarea>
-    </div>
-</div>
+            <div class="user-info">
+                <div class="info-block">
+                    <h4>INFORMAÇÕES PESSOAIS</h4>
+                    <p>Nome/razão social: <span id="info-nome"></span></p>
+                    <p>Cpf/Cnpj: <span id="info-cpf"></span></p>
+                    <p>Telefone: <span id="info-telefone"></span></p>
+                    <p>Email: <span id="info-email"></span></p>
+                </div>
+
+                <div class="info-block" id="info-conta-block">
+                    <h4>INFORMAÇÕES DA CONTA</h4>
+                    <p>Nome/razão social: <span id="info-conta-nome"></span></p>
+                    <p>Cpf/Cnpj: <span id="info-conta-cpf"></span></p>
+                    <p>Email: <span id="info-conta-email"></span></p>
+                    <a href="#" class="edit-link" id="btnEditar"><i class="fas fa-link"></i> Alterar Dados do Perfil</a>
+                    <button id="btnSalvar" style="display:none; margin-top:10px;">Enviar</button>
+                </div>
+            </div>
+
+            <div class="history">
+                <h4>Histórico</h4>
+                <textarea readonly id="info-historico"></textarea>
+            </div>
+        </div>
     </main>
+
+    <!-- Modal para mensagens -->
+    <div id="modal">
+        <div id="modal-content">
+            <p id="modal-message"></p>
+            <button id="modal-close-btn">Fechar</button>
+        </div>
+    </div>
 
     <script>
         function toggleSidebar() {
@@ -161,6 +235,178 @@
 
             sidebar.classList.toggle('expanded');
             overlay.classList.toggle('active');
+        }
+
+        // Modal customizado para mensagens
+        const modal = document.getElementById('modal');
+        const modalMessage = document.getElementById('modal-message');
+        const modalCloseBtn = document.getElementById('modal-close-btn');
+
+        function showModal(message) {
+            modalMessage.innerText = message;
+            modal.style.display = 'block';
+        }
+
+        modalCloseBtn.onclick = () => {
+            modal.style.display = 'none';
+        }
+
+        window.onclick = function (event) {
+            if (event.target == modal) {
+                modal.style.display = 'none';
+            }
+        }
+
+        // Configuração Supabase
+        const supabaseUrl = "https://lvqnxtjxczxsyhbjpiwb.supabase.co";
+        const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imx2cW54dGp4Y3p4c3loYmpwaXdiIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDk2ODM3NTUsImV4cCI6MjA2NTI1OTc1NX0.FAGd8OsDZB_baU4z-FDfxixEKC_EksK88JJM7LoyidQ";
+        const supabaseClient = supabase.createClient(supabaseUrl, supabaseKey);
+
+        async function buscarUsuario() {
+            const busca = document.getElementById("searchInput").value.trim();
+
+            if (!busca) {
+                showModal("Digite um nome ou ID para buscar.");
+                return;
+            }
+
+            // Limpa os dados anteriores
+            document.getElementById("userId").innerText = "Carregando...";
+            document.getElementById("info-nome").innerText = "";
+            document.getElementById("info-cpf").innerText = "";
+            document.getElementById("info-telefone").innerText = "";
+            document.getElementById("info-email").innerText = "";
+            document.getElementById("info-conta-nome").innerText = "";
+            document.getElementById("info-conta-cpf").innerText = "";
+            document.getElementById("info-conta-email").innerText = "";
+            document.getElementById("info-historico").value = "";
+
+            try {
+                let query = supabaseClient.from("usuarios");
+
+                if (/^\d+$/.test(busca)) {
+                    // Busca por ID
+                    const { data, error } = await query.select("*").eq("id", parseInt(busca)).single();
+                    if (error || !data) {
+                        showModal("Usuário não encontrado pelo ID.");
+                        document.getElementById("userId").innerText = "ID - Não encontrado";
+                        return;
+                    }
+                    preencherDados(data);
+                } else {
+                    // Busca por nome (busca parcial, case insensitive)
+                    const { data, error } = await query.select("*").ilike("nome", `%${busca}%`).limit(1);
+                    if (error || !data || data.length === 0) {
+                        showModal("Usuário não encontrado pelo nome.");
+                        document.getElementById("userId").innerText = "ID - Não encontrado";
+                        return;
+                    }
+                    preencherDados(data[0]);
+                }
+            } catch (error) {
+                showModal("Erro ao buscar usuário: " + error.message);
+                document.getElementById("userId").innerText = "Erro na busca";
+            }
+        }
+
+        function preencherDados(usuario) {
+            document.getElementById("userId").innerText = `ID - ${usuario.id || "N/A"}`;
+
+            document.getElementById("info-nome").innerText = usuario.nome || "";
+            document.getElementById("info-cpf").innerText = usuario.cpf_cnpj || "";
+            document.getElementById("info-telefone").innerText = usuario.telefone || "";
+            document.getElementById("info-email").innerText = usuario.email || "";
+
+            const modoEdicao = document.getElementById("btnSalvar").style.display === 'inline-block';
+
+            if (!modoEdicao) {
+                document.getElementById("info-conta-nome").innerText = usuario.nome || "";
+                document.getElementById("info-conta-cpf").innerText = usuario.cpf_cnpj || "";
+                document.getElementById("info-conta-email").innerText = usuario.email || "";
+            }
+
+            document.getElementById("info-historico").value = usuario.historico || "";
+        }
+
+        // Controle edição
+
+        const btnEditar = document.getElementById('btnEditar');
+        const btnSalvar = document.getElementById('btnSalvar');
+
+        btnEditar.addEventListener('click', (e) => {
+            e.preventDefault();
+            entrarModoEdicao();
+        });
+
+        btnSalvar.addEventListener('click', async () => {
+            await salvarAlteracoes();
+        });
+
+        function entrarModoEdicao() {
+            // Trocar os spans por inputs para editar, alinhados lado a lado
+            ['nome', 'cpf', 'email'].forEach(campo => {
+                const span = document.getElementById(`info-conta-${campo}`);
+                const valor = span.innerText;
+                const input = document.createElement('input');
+                input.type = 'text';
+                input.id = `input-conta-${campo}`;
+                input.value = valor;
+                input.style.width = '100%';
+                span.replaceWith(input);
+            });
+            btnEditar.style.display = 'none';
+            btnSalvar.style.display = 'inline-block';
+        }
+
+        function sairModoEdicao(usuarioAtualizado) {
+            // Trocar inputs por spans com valores atualizados
+            ['nome', 'cpf', 'email'].forEach(campo => {
+                const input = document.getElementById(`input-conta-${campo}`);
+                const valor = usuarioAtualizado ? usuarioAtualizado[campoMap(campo)] : input.value;
+                const span = document.createElement('span');
+                span.id = `info-conta-${campo}`;
+                span.innerText = valor || '';
+                input.replaceWith(span);
+            });
+            btnEditar.style.display = 'inline-block';
+            btnSalvar.style.display = 'none';
+        }
+
+        function campoMap(campo) {
+            if (campo === 'cpf') return 'cpf_cnpj';
+            return campo;
+        }
+
+        async function salvarAlteracoes() {
+            const idTexto = document.getElementById('userId').innerText;
+            const id = idTexto.replace('ID - ', '').trim();
+            if (!id || id === 'Não encontrado' || id === 'Carregando...' || id === 'Erro na busca') {
+                showModal('Nenhum usuário válido para alterar.');
+                return;
+            }
+
+            const nome = document.getElementById('input-conta-nome').value.trim();
+            const cpf_cnpj = document.getElementById('input-conta-cpf').value.trim();
+            const email = document.getElementById('input-conta-email').value.trim();
+
+            try {
+                const { data, error } = await supabaseClient
+                    .from('usuarios')
+                    .update({ nome, cpf_cnpj, email })
+                    .eq('id', id)
+                    .select()
+                    .single();
+
+                if (error) {
+                    showModal('Erro ao salvar: ' + error.message);
+                    return;
+                }
+                showModal('Dados atualizados com sucesso!');
+                sairModoEdicao(data);
+                preencherDados(data);
+            } catch (err) {
+                showModal('Erro inesperado: ' + err.message);
+            }
         }
     </script>
 </body>
